--- a/JustPlay/Podfile
+++ b/JustPlay/Podfile
@@ -5,6 +5,7 @@ target 'JustPlay' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
 	pod 'AEOTPTextField'
+  pod 'PagerTabStripView'
   # Pods for JustPlay
 
 end
